--- a/study#2/3_tabular_wine.ipynb
+++ b/study#2/3_tabular_wine.ipynb
@@ -35,7 +35,7 @@
    ],
    "source": [
     "import csv\n",
-    "wine_path = \"../data/p1ch4/tabular-wine/winequality-white.csv\"\n",
+    "wine_path = \"../data/study#2/tabular-wine/winequality-white.csv\"\n",
     "wineq_numpy = np.loadtxt(wine_path, dtype=np.float32, delimiter=\",\", skiprows=1)\n",
     "wineq_numpy"
    ]
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 13
     }
    ],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 15
     }
    ],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 16
     }
    ],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 17
     }
    ],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 18
     }
    ],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 20
     }
    ],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 22
     }
    ],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 23
     }
    ],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 24
     }
    ],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 25
     }
    ],
    "source": [
