--- a/study#3/4_MNIST_classification.ipynb
+++ b/study#3/4_MNIST_classification.ipynb
@@ -72,12 +72,16 @@
     "epochs = n_iters / (len(train_dataset) / batch_size)\n",
     "input_dim = 784\n",
     "output_dim = 10\n",
+    "# [test] 만일 MSE을 LOSS 함수로 쓴다면???\n",
+    "# output_dim = 1\n",
     "lr_rate = 0.001\n",
     "\n",
     "# Step 4. Instantiate Model Class\n",
     "model = LogisticRegression(input_dim, output_dim)\n",
     "# Step 5. Instantiate Loss Class\n",
     "criterion = torch.nn.CrossEntropyLoss() # computes softmax and then the cross entropy\n",
+    "# [test] 만일 MSE을 LOSS 함수로 쓴다면???\n",
+    "# criterion = torch.nn.MSELoss()\n",
     "# Step 6. Instantiate Optimizer Class\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=lr_rate)"
    ]
@@ -91,12 +95,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Iteration: 500. Loss: 1.912878155708313. Accuracy: 65.98999786376953.\n",
-      "Iteration: 1000. Loss: 1.5512317419052124. Accuracy: 74.62999725341797.\n",
-      "Iteration: 1500. Loss: 1.4021804332733154. Accuracy: 78.41000366210938.\n",
-      "Iteration: 2000. Loss: 1.2370214462280273. Accuracy: 80.16000366210938.\n",
-      "Iteration: 2500. Loss: 1.1161025762557983. Accuracy: 81.66000366210938.\n",
-      "Iteration: 3000. Loss: 1.0668206214904785. Accuracy: 82.52999877929688.\n"
+      "Iteration: 500. Loss: 1.8824325799942017. Accuracy: 68.69999694824219.\n",
+      "Iteration: 1000. Loss: 1.5503674745559692. Accuracy: 77.62000274658203.\n",
+      "Iteration: 1500. Loss: 1.3944940567016602. Accuracy: 80.4000015258789.\n",
+      "Iteration: 2000. Loss: 1.2212333679199219. Accuracy: 81.83000183105469.\n",
+      "Iteration: 2500. Loss: 1.097227692604065. Accuracy: 82.73999786376953.\n",
+      "Iteration: 3000. Loss: 0.9613311290740967. Accuracy: 83.47000122070312.\n"
      ]
     }
    ],
@@ -110,6 +114,9 @@
     "\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(images)\n",
+    "        # [test] 만일 MSE을 LOSS 함수로 쓴다면???\n",
+    "        # labels = labels.type(torch.FloatTensor)\n",
+    "        # outputs = outputs.type(torch.FloatTensor)\n",
     "        loss = criterion(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
