--- a/study#3/4_MNIST_classification.ipynb
+++ b/study#3/4_MNIST_classification.ipynb
@@ -68,13 +68,12 @@
    },
    "outputs": [],
    "source": [
-    "n_iters = 3000\n",
-    "epochs = n_iters / (len(train_dataset) / batch_size)\n",
+    "epochs = 2\n",
     "input_dim = 784\n",
     "output_dim = 10\n",
     "# [test] 만일 MSE을 LOSS 함수로 쓴다면???\n",
     "# output_dim = 1\n",
-    "lr_rate = 0.001\n",
+    "lr_rate = 0.01\n",
     "\n",
     "# Step 4. Instantiate Model Class\n",
     "model = LogisticRegression(input_dim, output_dim)\n",
@@ -95,12 +94,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Iteration: 500. Loss: 1.8824325799942017. Accuracy: 68.69999694824219.\n",
-      "Iteration: 1000. Loss: 1.5503674745559692. Accuracy: 77.62000274658203.\n",
-      "Iteration: 1500. Loss: 1.3944940567016602. Accuracy: 80.4000015258789.\n",
-      "Iteration: 2000. Loss: 1.2212333679199219. Accuracy: 81.83000183105469.\n",
-      "Iteration: 2500. Loss: 1.097227692604065. Accuracy: 82.73999786376953.\n",
-      "Iteration: 3000. Loss: 0.9613311290740967. Accuracy: 83.47000122070312.\n"
+      "Iteration: 100. Loss: 1.5278689861297607. Accuracy: 75.83000183105469.\n",
+      "Iteration: 200. Loss: 1.1347965002059937. Accuracy: 81.0999984741211.\n",
+      "Iteration: 300. Loss: 1.0471291542053223. Accuracy: 82.70999908447266.\n",
+      "Iteration: 400. Loss: 0.9169452786445618. Accuracy: 83.91000366210938.\n",
+      "Iteration: 500. Loss: 0.8972954750061035. Accuracy: 85.0199966430664.\n",
+      "Iteration: 600. Loss: 0.9665325284004211. Accuracy: 85.41999816894531.\n",
+      "Iteration: 700. Loss: 0.6086663007736206. Accuracy: 86.05000305175781.\n",
+      "Iteration: 800. Loss: 0.6255840063095093. Accuracy: 86.37000274658203.\n",
+      "Iteration: 900. Loss: 0.602271318435669. Accuracy: 86.9000015258789.\n",
+      "Iteration: 1000. Loss: 0.6010639071464539. Accuracy: 86.95999908447266.\n",
+      "Iteration: 1100. Loss: 0.6313837170600891. Accuracy: 87.20999908447266.\n",
+      "Iteration: 1200. Loss: 0.6083102822303772. Accuracy: 87.51000213623047.\n"
      ]
     }
    ],
@@ -122,7 +127,7 @@
     "        optimizer.step()\n",
     "\n",
     "        iter+=1\n",
-    "        if iter%500==0:\n",
+    "        if iter%100==0:\n",
     "            # calculate Accuracy\n",
     "            correct = 0\n",
     "            total = 0\n",
