--- a/study#3/1_manual_gradient.ipynb
+++ b/study#3/1_manual_gradient.ipynb
@@ -29,8 +29,8 @@
    "outputs": [],
    "source": [
     "# Training Data\n",
-    "x_data = [1.0, 2.0, 3.0]\n",
-    "y_data = [2.0, 4.0, 6.0]\n",
+    "x_data = [1.0, 2.0, 3.0] # x\n",
+    "y_data = [2.0, 4.0, 6.0] # label\n",
     "\n",
     "w = 1.0  # a random guess: random value"
    ]
