--- a/study#3/2_auto_gradient.ipynb
+++ b/study#3/2_auto_gradient.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,54 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\tgrad:  1.0 2.0 -2.0\n",
-      "\tgrad:  2.0 4.0 -7.840000152587891\n",
-      "\tgrad:  3.0 6.0 -16.228801727294922\n",
-      "Epoch: 0 | Loss: 7.315943717956543\n",
-      "\tgrad:  1.0 2.0 -1.478623867034912\n",
-      "\tgrad:  2.0 4.0 -5.796205520629883\n",
-      "\tgrad:  3.0 6.0 -11.998146057128906\n",
-      "Epoch: 1 | Loss: 3.9987640380859375\n",
-      "\tgrad:  1.0 2.0 -1.0931644439697266\n",
-      "\tgrad:  2.0 4.0 -4.285204887390137\n",
-      "\tgrad:  3.0 6.0 -8.870372772216797\n",
-      "Epoch: 2 | Loss: 2.1856532096862793\n",
-      "\tgrad:  1.0 2.0 -0.8081896305084229\n",
-      "\tgrad:  2.0 4.0 -3.1681032180786133\n",
-      "\tgrad:  3.0 6.0 -6.557973861694336\n",
-      "Epoch: 3 | Loss: 1.1946394443511963\n",
-      "\tgrad:  1.0 2.0 -0.5975041389465332\n",
-      "\tgrad:  2.0 4.0 -2.3422164916992188\n",
-      "\tgrad:  3.0 6.0 -4.848389625549316\n",
-      "Epoch: 4 | Loss: 0.6529689431190491\n",
-      "\tgrad:  1.0 2.0 -0.4417421817779541\n",
-      "\tgrad:  2.0 4.0 -1.7316293716430664\n",
-      "\tgrad:  3.0 6.0 -3.58447265625\n",
-      "Epoch: 5 | Loss: 0.35690122842788696\n",
-      "\tgrad:  1.0 2.0 -0.3265852928161621\n",
-      "\tgrad:  2.0 4.0 -1.2802143096923828\n",
-      "\tgrad:  3.0 6.0 -2.650045394897461\n",
-      "Epoch: 6 | Loss: 0.195076122879982\n",
-      "\tgrad:  1.0 2.0 -0.24144840240478516\n",
-      "\tgrad:  2.0 4.0 -0.9464778900146484\n",
-      "\tgrad:  3.0 6.0 -1.9592113494873047\n",
-      "Epoch: 7 | Loss: 0.10662525147199631\n",
-      "\tgrad:  1.0 2.0 -0.17850565910339355\n",
-      "\tgrad:  2.0 4.0 -0.699742317199707\n",
-      "\tgrad:  3.0 6.0 -1.4484672546386719\n",
-      "Epoch: 8 | Loss: 0.0582793727517128\n",
-      "\tgrad:  1.0 2.0 -0.1319713592529297\n",
-      "\tgrad:  2.0 4.0 -0.5173273086547852\n",
-      "\tgrad:  3.0 6.0 -1.070866584777832\n",
-      "Epoch: 9 | Loss: 0.03185431286692619\n",
-      "Prediction (after training) 4 7.804864406585693\n"
+      "\tgrad:  1.0 2.0 -2.0\n\tgrad:  2.0 4.0 -7.840000152587891\n\tgrad:  3.0 6.0 -16.228801727294922\nEpoch: 0 | Loss: 7.315943717956543\n\tgrad:  1.0 2.0 -1.478623867034912\n\tgrad:  2.0 4.0 -5.796205520629883\n\tgrad:  3.0 6.0 -11.998146057128906\nEpoch: 1 | Loss: 3.9987640380859375\n\tgrad:  1.0 2.0 -1.0931644439697266\n\tgrad:  2.0 4.0 -4.285204887390137\n\tgrad:  3.0 6.0 -8.870372772216797\nEpoch: 2 | Loss: 2.1856532096862793\n\tgrad:  1.0 2.0 -0.8081896305084229\n\tgrad:  2.0 4.0 -3.1681032180786133\n\tgrad:  3.0 6.0 -6.557973861694336\nEpoch: 3 | Loss: 1.1946394443511963\n\tgrad:  1.0 2.0 -0.5975041389465332\n\tgrad:  2.0 4.0 -2.3422164916992188\n\tgrad:  3.0 6.0 -4.848389625549316\nEpoch: 4 | Loss: 0.6529689431190491\n\tgrad:  1.0 2.0 -0.4417421817779541\n\tgrad:  2.0 4.0 -1.7316293716430664\n\tgrad:  3.0 6.0 -3.58447265625\nEpoch: 5 | Loss: 0.35690122842788696\n\tgrad:  1.0 2.0 -0.3265852928161621\n\tgrad:  2.0 4.0 -1.2802143096923828\n\tgrad:  3.0 6.0 -2.650045394897461\nEpoch: 6 | Loss: 0.195076122879982\n\tgrad:  1.0 2.0 -0.24144840240478516\n\tgrad:  2.0 4.0 -0.9464778900146484\n\tgrad:  3.0 6.0 -1.9592113494873047\nEpoch: 7 | Loss: 0.10662525147199631\n\tgrad:  1.0 2.0 -0.17850565910339355\n\tgrad:  2.0 4.0 -0.699742317199707\n\tgrad:  3.0 6.0 -1.4484672546386719\nEpoch: 8 | Loss: 0.0582793727517128\n\tgrad:  1.0 2.0 -0.1319713592529297\n\tgrad:  2.0 4.0 -0.5173273086547852\n\tgrad:  3.0 6.0 -1.070866584777832\nEpoch: 9 | Loss: 0.03185431286692619\nPrediction (after training) 4 7.804864406585693\n"
      ]
     }
    ],
